--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,12 +4,12 @@
   padding: $base-size;
 }
 
-.title {
-  padding: ($base-size * 3) 0;
-  text-align: center;
-  font-size: ($base-size * 3);
-  text-transform: uppercase;
-}
+// .title {
+//   padding: ($base-size * 3) 0;
+//   text-align: center;
+//   font-size: ($base-size * 3);
+//   text-transform: uppercase;
+// }
 
 .subtitle {
   padding: ($base-size * 2) 0;
@@ -17,8 +17,9 @@
   font-size: ($base-size * 2);
   font-style: italic;
   font-weight: normal;
-}
-
-.title + .subtitle {
   margin-top: (-$base-size * 3);
 }
+
+// .title + .subtitle {
+//   margin-top: (-$base-size * 3);
+// }
